styles/index.css
:root {
    /* Colors */
    --primary-color-1: hsl(337, 48%, 49%);
    --primary-color-2: #FBFCFE;

    --secondary-color-1: #36536b;
    --secondary-color-2: #6C8294;
    --secondary-color-3: hsl(207, 27%, 15%);
    --secondary-color-4: hsl(337, 60%, 64%);

    --background-color: #edf3f8;

    /* Breakpoints */
    --desktop: 1440px;
    --laptop: 1040px;
    --tablet: 768px;
    --mobile: 375px;

    /* Fonts size */
    --heading-900: 2rem;
    --heading-800: 2rem;
    --heading-700: 1.125rem;
    --heading-600: 1.5rem;
    --body-500: 0.938rem;

    /* Padding */
    --sidePadding: 1.5rem;
    --topAndBotPadding: 4rem;
}

/* Titles */
h1,
h2 {
    font-family: DMserifDisplayRegular;
    font-weight: normal;
    color: var(--secondary-color-1);
}

h3 {
    font-size: 1.125rem;
    font-family: PublicSansRegular;
}


@media screen and (min-width: 768px) {
    :root {

        --heading-900: 3rem;
        --heading-800: 3rem;

        /* Padding */
        --sidePadding: 2.5rem;

    }
}

@media screen and (min-width: 1024px) {
    :root {
        /* Padding */
        --topAndBotPadding: 2rem;
        --sidePadding: 4rem;
    }
}

@media screen and (min-width: 1440px) {


    :root {
        /* Fonts size */
        --heading-900: 4.5rem;
        --heading-800: 3.5rem;

        --heading-700: 2rem;


        /* Padding */
        --sidePadding: 10rem;
        --topAndBotPadding: 4rem;
    }
}

/* Font-family */
@font-face {
    font-family: DMSerifDisplayRegular;
    src: url('../public/fonts/static/DM_Serif_Display/DMSerifDisplay-Regular.ttf');
}

@font-face {
    font-family: PublicSansRegular;
    src: url('../public/fonts/static/Public_Sans/PublicSans-Regular.ttf');
}


* {
    margin: 0;
    padding: 0;
    /* box-sizing: inherit; */
    font-family: PublicSansRegular;
}

img {
    max-width: 100%;
    display: block
}

html {
    /* Bug : rentre en conflit avec le form validation (le message d'erreur ne s'affiche pas)  */
    /* scroll-behavior: smooth; */
    font-size: 100%;

}

body {
    overflow-x: hidden;
    scroll-behavior: smooth;
    font-size: var(--body-500);
    line-height: 1.75rem;
    position: relative;
    z-index: 15;
    background-color: var(--background-color);

}


/* STYLE */
.wrapperLeftAndRight {
    display: grid;
    grid-template-columns: 60% 40%;
}

.leftSide {
    display: flex;
    flex-direction: column;
    background-color: var(--black);
}


.rightSide {
    max-height: 600px;
}

.rightSide img {
    max-width: 100%;
    max-height: inherit;
    object-fit: cover;
    object-position: left;
}

/* Button */

button {
    padding: .75rem 1.5rem;
    border: none;
    font: inherit;
    color: inherit;
    background-color: transparent;
    cursor: pointer;
    border-radius: 3rem;
    font-weight: 900;
}

button:hover,
button:focus-visible {
    transform: translateY(-4px);
    transition: transform 250ms;

}

button:disabled {
    opacity: .5;
}

.primary-button {
    background-color: var(--primary-color-1);
    color: var(--primary-color-2);

}

.primary-button:hover,
.primary-button:focus {
    background-color: var(--secondary-color-4);
}


.secondary-button-light {
    padding: .75rem 3rem;

    background-color: var(--secondary-color-3);
    border: 1px solid var(--primary-color-2);
}

.secondary-button-light:hover,
.secondary-button-light:focus {
    color: var(--secondary-color-3);
    background-color: var(--primary-color-2);
}


.secondary-button-dark {
    border: 1px solid var(--secondary-color-1);
    color: var(--secondary-color-1);
}

.secondary-button-dark:hover,
.secondary-button-dark:focus {
    background-color: var(--secondary-color-1);
    color: var(--primary-color-2);
}



/* Text fields */

input,
textarea {
    /* all: unset; */
    padding: .5em;
    border: none;
    border-radius: 0;
    border-bottom: 1px solid var(--secondary-color-1);
    opacity: .8;
    color: var(--secondary-color-1);
}

input:active,
textarea:active {
    opacity: 1;
}


textarea {
    resize: none;
}

/* Check box */

/* Customize the label (the container) */
.checkboxContainer {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default checkbox */
.checkboxContainer input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

/* Create a custom checkbox */
.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
}

/* On mouse-over, add a grey background color */
.checkboxContainer:hover input~.checkmark {
    background-color: var(--primary-color-1);
    opacity: .5;
}

/* When the checkbox is checked, add a blue background */
.checkboxContainer input:checked~.checkmark {
    background-color: var(--primary-color-1);
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.checkboxContainer input:checked~.checkmark:after {
    display: block;
}

/* Style the checkmark/indicator */
.checkboxContainer .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid var(--primary-color-2);
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

a {
    text-decoration: none;
}

.dark-filter {
    background-color: rgba(0, 0, 0, 23%);
    transition: background-color .5s,
}

.overlay-loader {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgb(35, 31, 31, .5);
    width: 100%;
    height: 100%;
    z-index: 999;

}


.overlay-burger-menu {
    width: 100%;
    height: 100%;
    right: -100%;
    position: fixed;
    background-color: rgb(35, 31, 31, .3);
    z-index: 30;
    overflow-y: hidden;
    transition: .4s ease-in-out;

}

.overlay-burger-menu.isActive {
    right: 0;
}


main {
    /* min-height: 100svh; */
    padding: 0 var(--sidePadding);
    background-color: var(--background-color);
}

.pricing {
    padding-bottom: 2rem;
}

.bg-circle-home {
    position: relative;
}

.bg-circle-home::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 1;
    background-image: url('../public/images/shared/desktop/bg-pattern-circle.svg');
    background-repeat: no-repeat;
    background-position: center -64vh;
}

.top-right-bg-circle {
    position: relative;
}

.top-right-bg-circle::before {
    content: '';
    position: absolute;
    top: -46rem;
    right: -33rem;
    width: 48.75rem;
    height: 48.75rem;
    z-index: 1;
    background-image: url(/_next/static/media/bg-pattern-circle.96abc064.svg);
    background-repeat: no-repeat;
}

/* UTILS */

.display-none {
    display: none !important;
}

.d-flex {
    display: flex;
}

.f-col {
    flex-direction: column;
}

.align-items-center {
    align-items: center;
}

.justify-content-end {
    justify-content: end;
}

.justify-content-center {
    justify-content: center;
}

.align-items-end {
    align-items: flex-end;
}

.justify-self-start {
    justify-self: flex-start;
}

.bottom-minus-2 {
    bottom: -2rem;
}

.top-minus-2 {
    top: -2rem;

}

.flex-grow-2 {
    flex-grow: 2;
}

.mb-4 {
    margin-bottom: 4rem;
}

.p-0 {
    padding: 0 !important;
}

.pb-1 {
    padding-bottom: 1rem;
}

.pl-1 {
    padding-left: 1rem;
}

.pr-1 {
    padding-right: 1rem;
}

.gap-1 {
    gap: 1rem;
}

.gap-2 {
    gap: 2rem;
}

.gap-4 {
    gap: 4rem;
}

.gap-05 {
    gap: .5rem
}

.max-width {
    max-width: 90rem;
    margin-inline: auto;
}

.overflow-y-hidden {
    overflow-y: hidden;
}

.h-100 {
    min-height: 100svh;
}

.h-80 {
    min-height: 80svh;
}


/* Scrollbar for chrome */
::-webkit-scrollbar {
    width: .75rem;
}

::-webkit-scrollbar-track {
    border-radius: .5rem;
    background-color: var(--lightGrey);
    border: 1px solid #cacaca;
    margin-block: .1em;

}

::-webkit-scrollbar-thumb {
    border-radius: .5rem;
    background-color: #A0A0A0;
}


/* Media queries */

@media screen and (min-width: 768px) {
    .bg-circle-home::before {

        background-position: center -56vh;

    }

    .top-right-bg-circle::before {
        top: -35rem;
        left: unset;
        right: -31rem;
    }

    .pricing {
        padding-bottom: 4rem;
    }
}

@media screen and (min-width: 1024px) {
    .h-100 {
        min-height: 100vh;
    }

    .h-80 {
        min-height: 80vh;
    }

    main {
        padding: 0 var(--sidePadding);
    }

}

@media screen and (min-width: 1440px) {
    .bg-circle-home::before {
        width: 48.75rem;
        height: 48.75rem;
        right: -4rem;
        left: unset;
        top: -11rem;
        background-position: unset;
    }

    .top-right-bg-circle::before {
        top: -43rem;
        left: unset;
        right: -9rem;
    }
}

